prevent scroller jump after tree is rendered

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -12,6 +12,7 @@ body {
   font: 20px 'Open Sans', Helvetica, Arial, sans-serif;
   margin:0;
   background:#F8F7EC;
+  overflow-y:scroll;
 }
 
 .container {
